// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden stories happy path: from an idea to a merged commit 1`] = `
[
  {
    "at": 1000,
    "project": null,
    "source": null,
    "taskId": 12,
    "title": "CSV export",
    "type": "task.created",
    "v": 1,
  },
  {
    "at": 2000,
    "taskId": 12,
    "type": "task.spec_requested",
    "v": 1,
  },
  {
    "at": 3000,
    "request": 1,
    "taskId": 12,
    "type": "task.dispatch_started",
    "v": 1,
  },
  {
    "at": 4000,
    "request": 2,
    "taskId": 12,
    "type": "task.spec_worktree_created",
    "v": 1,
    "worktree": {
      "path": "/repo/.skelcrew/spec-worktrees/12-csv-export",
    },
  },
  {
    "at": 5000,
    "session": "spec-1",
    "taskId": 12,
    "type": "task.spec_session_started",
    "v": 1,
  },
  {
    "at": 6000,
    "by": "agent",
    "spec": {
      "acceptance": [
        "Clicking Export downloads a CSV of the visible rows.",
      ],
      "openQuestions": [],
      "scope": "Add a CSV export button to the reports page.",
    },
    "taskId": 12,
    "type": "task.specced",
    "v": 1,
  },
  {
    "at": 7000,
    "taskId": 12,
    "type": "task.ready",
    "v": 1,
  },
  {
    "at": 8000,
    "request": 3,
    "taskId": 12,
    "type": "task.dispatch_started",
    "v": 1,
  },
  {
    "at": 9000,
    "request": 4,
    "taskId": 12,
    "type": "task.worktree_created",
    "v": 1,
    "worktree": {
      "branch": "task/12-csv-export",
      "path": "/repo/.worktrees/12",
    },
  },
  {
    "at": 10000,
    "session": "develop-1",
    "taskId": 12,
    "type": "task.dispatched",
    "v": 1,
  },
  {
    "at": 11000,
    "branch": {
      "changedFiles": [
        "src/reports/export.ts",
      ],
      "commits": 3,
      "head": "dddddddddddddddddddddddddddddddddddddddd",
    },
    "gate": "local",
    "request": 5,
    "taskId": 12,
    "type": "task.done_reported",
    "v": 1,
  },
  {
    "at": 12000,
    "gate": "local",
    "next": {
      "gate": "review",
      "request": 6,
    },
    "taskId": 12,
    "type": "task.gate_passed",
    "v": 1,
  },
  {
    "at": 13000,
    "gate": "review",
    "next": null,
    "taskId": 12,
    "type": "task.gate_passed",
    "v": 1,
  },
  {
    "at": 13000,
    "taskId": 12,
    "type": "task.checks_passed",
    "v": 1,
  },
  {
    "at": 13000,
    "request": 7,
    "taskId": 12,
    "type": "task.merge_started",
    "v": 1,
  },
  {
    "at": 14000,
    "commit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "taskId": 12,
    "type": "task.merged",
    "v": 1,
  },
]
`;

exports[`golden stories blocked: the local gate fails three times, you retry, and it merges 1`] = `
[
  {
    "at": 1000,
    "project": null,
    "source": null,
    "taskId": 12,
    "title": "CSV export",
    "type": "task.created",
    "v": 1,
  },
  {
    "at": 2000,
    "taskId": 12,
    "type": "task.spec_requested",
    "v": 1,
  },
  {
    "at": 3000,
    "request": 1,
    "taskId": 12,
    "type": "task.dispatch_started",
    "v": 1,
  },
  {
    "at": 4000,
    "request": 2,
    "taskId": 12,
    "type": "task.spec_worktree_created",
    "v": 1,
    "worktree": {
      "path": "/repo/.skelcrew/spec-worktrees/12-csv-export",
    },
  },
  {
    "at": 5000,
    "session": "spec-1",
    "taskId": 12,
    "type": "task.spec_session_started",
    "v": 1,
  },
  {
    "at": 6000,
    "by": "agent",
    "spec": {
      "acceptance": [
        "Clicking Export downloads a CSV of the visible rows.",
      ],
      "openQuestions": [],
      "scope": "Add a CSV export button to the reports page.",
    },
    "taskId": 12,
    "type": "task.specced",
    "v": 1,
  },
  {
    "at": 7000,
    "taskId": 12,
    "type": "task.ready",
    "v": 1,
  },
  {
    "at": 8000,
    "request": 3,
    "taskId": 12,
    "type": "task.dispatch_started",
    "v": 1,
  },
  {
    "at": 9000,
    "request": 4,
    "taskId": 12,
    "type": "task.worktree_created",
    "v": 1,
    "worktree": {
      "branch": "task/12-csv-export",
      "path": "/repo/.worktrees/12",
    },
  },
  {
    "at": 10000,
    "session": "develop-1",
    "taskId": 12,
    "type": "task.dispatched",
    "v": 1,
  },
  {
    "at": 11000,
    "branch": {
      "changedFiles": [
        "src/reports/export.ts",
      ],
      "commits": 3,
      "head": "dddddddddddddddddddddddddddddddddddddddd",
    },
    "gate": "local",
    "request": 5,
    "taskId": 12,
    "type": "task.done_reported",
    "v": 1,
  },
  {
    "at": 12000,
    "failure": {
      "step": "local",
      "summary": "2 tests failed in export.test.ts",
    },
    "taskId": 12,
    "type": "task.gate_failed",
    "v": 1,
  },
  {
    "at": 13000,
    "branch": {
      "changedFiles": [
        "src/reports/export.ts",
      ],
      "commits": 3,
      "head": "dddddddddddddddddddddddddddddddddddddddd",
    },
    "gate": "local",
    "request": 6,
    "taskId": 12,
    "type": "task.done_reported",
    "v": 1,
  },
  {
    "at": 14000,
    "failure": {
      "step": "local",
      "summary": "2 tests failed in export.test.ts",
    },
    "taskId": 12,
    "type": "task.gate_failed",
    "v": 1,
  },
  {
    "at": 15000,
    "branch": {
      "changedFiles": [
        "src/reports/export.ts",
      ],
      "commits": 3,
      "head": "dddddddddddddddddddddddddddddddddddddddd",
    },
    "gate": "local",
    "request": 7,
    "taskId": 12,
    "type": "task.done_reported",
    "v": 1,
  },
  {
    "at": 16000,
    "failure": {
      "step": "local",
      "summary": "2 tests failed in export.test.ts",
    },
    "taskId": 12,
    "type": "task.gate_failed",
    "v": 1,
  },
  {
    "at": 16000,
    "reason": {
      "failure": {
        "step": "local",
        "summary": "2 tests failed in export.test.ts",
      },
      "kind": "out_of_attempts",
    },
    "taskId": 12,
    "type": "task.blocked",
    "v": 1,
  },
  {
    "at": 18000,
    "taskId": 12,
    "type": "task.unblocked",
    "v": 1,
  },
  {
    "at": 19000,
    "request": 8,
    "taskId": 12,
    "type": "task.dispatch_started",
    "v": 1,
  },
  {
    "at": 20000,
    "session": "develop-1",
    "taskId": 12,
    "type": "task.dispatched",
    "v": 1,
  },
  {
    "at": 21000,
    "branch": {
      "changedFiles": [
        "src/reports/export.ts",
      ],
      "commits": 3,
      "head": "dddddddddddddddddddddddddddddddddddddddd",
    },
    "gate": "local",
    "request": 9,
    "taskId": 12,
    "type": "task.done_reported",
    "v": 1,
  },
  {
    "at": 22000,
    "gate": "local",
    "next": {
      "gate": "review",
      "request": 10,
    },
    "taskId": 12,
    "type": "task.gate_passed",
    "v": 1,
  },
  {
    "at": 23000,
    "gate": "review",
    "next": null,
    "taskId": 12,
    "type": "task.gate_passed",
    "v": 1,
  },
  {
    "at": 23000,
    "taskId": 12,
    "type": "task.checks_passed",
    "v": 1,
  },
  {
    "at": 23000,
    "request": 11,
    "taskId": 12,
    "type": "task.merge_started",
    "v": 1,
  },
  {
    "at": 24000,
    "commit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "taskId": 12,
    "type": "task.merged",
    "v": 1,
  },
]
`;

exports[`golden stories escalated: a critical file waits for your approval, then merges 1`] = `
[
  {
    "at": 1000,
    "project": null,
    "source": null,
    "taskId": 12,
    "title": "CSV export",
    "type": "task.created",
    "v": 1,
  },
  {
    "at": 2000,
    "taskId": 12,
    "type": "task.spec_requested",
    "v": 1,
  },
  {
    "at": 3000,
    "request": 1,
    "taskId": 12,
    "type": "task.dispatch_started",
    "v": 1,
  },
  {
    "at": 4000,
    "request": 2,
    "taskId": 12,
    "type": "task.spec_worktree_created",
    "v": 1,
    "worktree": {
      "path": "/repo/.skelcrew/spec-worktrees/12-csv-export",
    },
  },
  {
    "at": 5000,
    "session": "spec-1",
    "taskId": 12,
    "type": "task.spec_session_started",
    "v": 1,
  },
  {
    "at": 6000,
    "by": "agent",
    "spec": {
      "acceptance": [
        "Clicking Export downloads a CSV of the visible rows.",
      ],
      "openQuestions": [],
      "scope": "Add a CSV export button to the reports page.",
    },
    "taskId": 12,
    "type": "task.specced",
    "v": 1,
  },
  {
    "at": 7000,
    "taskId": 12,
    "type": "task.ready",
    "v": 1,
  },
  {
    "at": 8000,
    "request": 3,
    "taskId": 12,
    "type": "task.dispatch_started",
    "v": 1,
  },
  {
    "at": 9000,
    "request": 4,
    "taskId": 12,
    "type": "task.worktree_created",
    "v": 1,
    "worktree": {
      "branch": "task/12-csv-export",
      "path": "/repo/.worktrees/12",
    },
  },
  {
    "at": 10000,
    "session": "develop-1",
    "taskId": 12,
    "type": "task.dispatched",
    "v": 1,
  },
  {
    "at": 11000,
    "branch": {
      "changedFiles": [
        "src/reports/export.ts",
        "src/auth/login.ts",
      ],
      "commits": 2,
      "head": "dddddddddddddddddddddddddddddddddddddddd",
    },
    "gate": "local",
    "request": 5,
    "taskId": 12,
    "type": "task.done_reported",
    "v": 1,
  },
  {
    "at": 12000,
    "gate": "local",
    "next": {
      "gate": "review",
      "request": 6,
    },
    "taskId": 12,
    "type": "task.gate_passed",
    "v": 1,
  },
  {
    "at": 13000,
    "gate": "review",
    "next": null,
    "taskId": 12,
    "type": "task.gate_passed",
    "v": 1,
  },
  {
    "at": 13000,
    "taskId": 12,
    "type": "task.checks_passed",
    "v": 1,
  },
  {
    "at": 13000,
    "criticalFiles": [
      "src/auth/login.ts",
    ],
    "taskId": 12,
    "type": "task.merge_approval_requested",
    "v": 1,
  },
  {
    "at": 14000,
    "request": 7,
    "taskId": 12,
    "type": "task.merge_started",
    "v": 1,
  },
  {
    "at": 15000,
    "commit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "taskId": 12,
    "type": "task.merged",
    "v": 1,
  },
]
`;

exports[`golden stories reverted: a merged task is undone and goes back to Spec with the reason 1`] = `
[
  {
    "at": 1000,
    "project": null,
    "source": null,
    "taskId": 12,
    "title": "CSV export",
    "type": "task.created",
    "v": 1,
  },
  {
    "at": 2000,
    "taskId": 12,
    "type": "task.spec_requested",
    "v": 1,
  },
  {
    "at": 3000,
    "request": 1,
    "taskId": 12,
    "type": "task.dispatch_started",
    "v": 1,
  },
  {
    "at": 4000,
    "request": 2,
    "taskId": 12,
    "type": "task.spec_worktree_created",
    "v": 1,
    "worktree": {
      "path": "/repo/.skelcrew/spec-worktrees/12-csv-export",
    },
  },
  {
    "at": 5000,
    "session": "spec-1",
    "taskId": 12,
    "type": "task.spec_session_started",
    "v": 1,
  },
  {
    "at": 6000,
    "by": "agent",
    "spec": {
      "acceptance": [
        "Clicking Export downloads a CSV of the visible rows.",
      ],
      "openQuestions": [],
      "scope": "Add a CSV export button to the reports page.",
    },
    "taskId": 12,
    "type": "task.specced",
    "v": 1,
  },
  {
    "at": 7000,
    "taskId": 12,
    "type": "task.ready",
    "v": 1,
  },
  {
    "at": 8000,
    "request": 3,
    "taskId": 12,
    "type": "task.dispatch_started",
    "v": 1,
  },
  {
    "at": 9000,
    "request": 4,
    "taskId": 12,
    "type": "task.worktree_created",
    "v": 1,
    "worktree": {
      "branch": "task/12-csv-export",
      "path": "/repo/.worktrees/12",
    },
  },
  {
    "at": 10000,
    "session": "develop-1",
    "taskId": 12,
    "type": "task.dispatched",
    "v": 1,
  },
  {
    "at": 11000,
    "branch": {
      "changedFiles": [
        "src/reports/export.ts",
      ],
      "commits": 3,
      "head": "dddddddddddddddddddddddddddddddddddddddd",
    },
    "gate": "local",
    "request": 5,
    "taskId": 12,
    "type": "task.done_reported",
    "v": 1,
  },
  {
    "at": 12000,
    "gate": "local",
    "next": {
      "gate": "review",
      "request": 6,
    },
    "taskId": 12,
    "type": "task.gate_passed",
    "v": 1,
  },
  {
    "at": 13000,
    "gate": "review",
    "next": null,
    "taskId": 12,
    "type": "task.gate_passed",
    "v": 1,
  },
  {
    "at": 13000,
    "taskId": 12,
    "type": "task.checks_passed",
    "v": 1,
  },
  {
    "at": 13000,
    "request": 7,
    "taskId": 12,
    "type": "task.merge_started",
    "v": 1,
  },
  {
    "at": 14000,
    "commit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "taskId": 12,
    "type": "task.merged",
    "v": 1,
  },
  {
    "at": 15000,
    "reason": "Export breaks on empty reports.",
    "request": 8,
    "taskId": 12,
    "type": "task.revert_started",
    "v": 1,
  },
  {
    "at": 16000,
    "commit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "reason": "Export breaks on empty reports.",
    "taskId": 12,
    "type": "task.reverted",
    "v": 1,
  },
  {
    "at": 17000,
    "request": 9,
    "taskId": 12,
    "type": "task.dispatch_started",
    "v": 1,
  },
]
`;
